--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-2025-09-13|Block 914508|Onchain Manifesto|https://ord.link/106004490
+2025-09-13|914508|Onchain Manifesto|https://ord.link/106004490
 2025-09-13|Launch website|GitHub repository|https://github.com/coherosphere
-2025-09-10|Domain registration
+2025-09-10|914047 Domain registration
